# qsdcolorxyz

./: CHANGES.rst  LICENSE  README.rst  index.html  setup.cfg  setup.py  tox.ini
.github/workflows/: CI.yml
dev/: .buildinfo  api.html  changes.html  citing.html  genindex.html  index.html  license.html  links.html  objects.inv  overview.html  py-modindex.html  search.html  searchindex.js
dev/_modules/: index.html
dev/_modules/qsdcolorxyz/: _color666xyzcode.html  _color666xyzmpsdecoder.html  _color666xyzpauli.html
dev/_static/: documentation_options.js
docs/: api.rst  conf.py  index.rst  links.rst  overview.rst
src/qsdcolorxyz/: __init__.py  _color666xyzcode.py  _color666xyzmpsdecoder.py  _color666xyzpauli.py  threequbit.py
tests/: test_color666xyz_code.py  test_color666xyz_mps_decoder.py  test_color666xyz_pauli.py  test_threequbit.py
